# index.js
@@ -1,5 +1,6 @@
-const express = require('express');
-const logger = require('./src/config/logger');
+const express = require('express')
+const cors = require('cors')
+const logger = require('./src/config/logger')
 const { dbConnection } = require('./src/database/config')
 
 const swaggerUi = require('swagger-ui-express')
@@ -12,10 +13,13 @@ const port = process.env.PORT || 3000
 const app = express()
 dbConnection()
 
+app.use(cors())
+
 app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument))
 
 app.use( express.json() )
 
+app.use('/api/auth', require('./src/routes/auth'))
 app.use('/api/todo', require('./src/routes/todo'))
 
 app.listen(port, () => {
