# src/models/Usuario.js
@@ -1,0 +1,19 @@
+const { Schema, model } = require('mongoose')
+
+const UsuarioSchema = Schema({
+    name: {
+        type: String,
+        required: true
+    },
+    email: {
+        type: String,
+        required: true,
+        uniqued: true
+    },
+    password: {
+        type: String,
+        required: true
+    }
+})
+
+module.exports = model('Usuario', UsuarioSchema)
