# src/routes/auth.js
@@ -1,0 +1,32 @@
+const { Router } = require('express')
+const { check } = require('express-validator')
+const { crearUsuario, loginUsuario, revalidarToken } = require('../controllers/auth')
+const { validarCampos } = require('../middlewares/validar-campos')
+const { validarJWT } = require('../middlewares/validar-jwt')
+
+const router = Router()
+
+router.post(
+    '/new',
+    [
+        check('name', 'El nombre es oblogatorio').not().isEmpty(),
+        check('email', 'El email es oblogatorio').isEmail(),
+        check('password', 'El password debe de ser de 6 caracteres').isLength({ min: 6 }),
+        validarCampos
+    ],
+    crearUsuario
+)
+
+router.post(
+    '/',
+    [
+        check('email', 'El email es oblogatorio').isEmail(),
+        check('password', 'El password debe de ser de 6 caracteres').isLength({ min: 6 }),
+        validarCampos
+    ],
+    loginUsuario
+)
+
+router.get('/renew', validarJWT, revalidarToken)
+
+module.exports = router
